# kubsu-cpp-tasks

./: .gitignore  LICENSE  README.md
als/: Makefile  als  errors.cpp  errors.h  gradient.cpp  gradient.h  linear_regression.cpp  linear_regression.h  main.cpp  matplotlibcpp.h  output.txt  static.sh
large-matrix/: eval_two_dimensions.cpp  main.h  output-oned.txt  output.txt  permutations.cpp  permutations.h
large-matrix/lib/: task1
large-matrix/scripts/: static.sh
task1/: CMakeLists.txt  Makefile  blocks.cpp  blocks.h  classic.cpp  classic.h  dynamic.sh  library.h  permutations.h  static.sh  test.cpp
task1/lib/: task1
task1/scripts/: static.sh
task1/test/: CMakeLists.txt  output.txt  test.cpp
